# School-Linux-Python-

./: README.md  errors.py  traffic_light.py  traffic_light_with_while.py
hm-4/: brackets.py  delete_elem.py  tree.py
hm-5/: factorial.py
hm-6/: text.txt  xor_encryption.py
hw-2/: errors.py  quadratic_equation.py  traffic_light.py  traffic_light_with_while.py
hw-3/: FizzBuzz.py  choice.py  digits.py  init_module.py  quadratic_equation.py  symbols.py  xor_cipher.py  xor_cipher_2.py
hw-4/: brackets.py  bubble_sort.py  delete_elem.py  list_and_set.py  tree.py
hw-5/: bank.py  counts.py  factorial.py
hw-6/: War and Peace.txt  calculator.py  example.txt  frequency.py  polish_notation.py  xor_encryption.py
hw-8/: decorators.py  figures.py  fun_class.py
packaging_module/: README.md  setup.cfg  setup.py
packaging_module/src/module_pkg/: init_module.py
packaging_module/src/packaging_init_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
