[metadata]
# replace with your username:
name = packaging-init-module
version = 0.0.1
author = Ksenia Tsipileva
author_email = tsksusha@yandex.ru
description = Initialization variable types of int and float
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksutikm/School-Linux-Python-/packaging_module
project_urls =
    Bug Tracker = https://github.com/ksutikm/School-Linux-Python-/packaging_module/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src